src/k8s/base/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: #{SERVICE_IMAGENAME}-#{SERVICE_TYPE}-default-deny
  namespace: #{GKE_NAMESPACE}
spec:
  podSelector: {}
  policyTypes: ["Ingress", "Egress"]
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: #{SERVICE_IMAGENAME}-#{SERVICE_TYPE}-allow-web-and-dns
  namespace: #{GKE_NAMESPACE}
spec:
  podSelector:
    matchLabels:
      app: #{SERVICE_IMAGENAME}-#{SERVICE_TYPE}
  policyTypes: ["Ingress", "Egress"]
  ingress:
    - ports:
        - protocol: TCP
          port: 8080
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
        - ipBlock: { cidr: 0.0.0.0/0 }
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to:
        - ipBlock: { cidr: 10.0.0.0/8 }
        - ipBlock: { cidr: 172.16.0.0/12 }
        - ipBlock: { cidr: 192.168.0.0/16 }
      ports:
        - protocol: TCP
          port: 3306
        - protocol: TCP
          port: 3307
    - to:
        - ipBlock: { cidr: 169.254.169.254/32 }
      ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 443
    - to:
        - ipBlock: { cidr: 199.36.153.8/30 } # Google APIs Restricted VIP
      ports:
        - protocol: TCP
          port: 443
    # Allow Google public API ranges when Private Google Access/DNS is not resolving to Restricted VIP
    - to:
        - ipBlock: { cidr: 170.167.50.0/24} # googleapis.com primary block
        - ipBlock: { cidr: 173.194.0.0/16 } # googleapis.com primary block
        - ipBlock: { cidr: 142.250.0.0/15 } # Google services block
        - ipBlock: { cidr: 172.217.0.0/16 } # Additional Google block
        - ipBlock: { cidr: 209.85.128.0/17 } # Additional Google block
      ports:
        - protocol: TCP
          port: 443
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 443
        - protocol: TCP
          port: 80
